--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
 
     <header class="header">
 
-      <div><a href="#" class="header__img"></a></div>
+      <div><a href="#" class="header__img"></a>
+        <a href="#" class="header__museum">
+          <img class="header__museum--logo" src='./images/details/textNAMU.svg' alt="logo">
+        </a>
+      </div>
 
       <div class="container">
         <div class="header__wrapper">
@@ -54,7 +58,7 @@
               <div class="menu__list">
                 <div class="menu__list--top">
                   <li class="menu__item">
-                    <a href="#home" class="menu__link">Галерея</a>
+                    <a href="#gallery" class="menu__link">Галерея</a>
                   </li>
 
                   <li class="menu__item">
@@ -104,7 +108,7 @@
     <main class="main">
       <div class="container">
         <div class="main__container" id="event">
-          <h1 class="title">Актуальні події</h1>
+          <h2 class="title">Актуальні події</h2>
 
           <div class="main__content">
             <div class="main__events">
@@ -161,6 +165,38 @@
 
       </div>
     </main>
+
+    <section class="gallery" id="gallery">
+      <div class="container">
+        <h2 class="title">Галерея</h2>
+<div class="galler__wrapper">
+  <div class="gallery__content">
+
+    <div class="gallery__image">
+      <div class="gallery__img gallery__img--1"></div>
+      <div class="gallery__img gallery__img--2"></div>
+      <div class="gallery__img gallery__img--3"></div>
+      <div class="gallery__img gallery__img--4"></div>
+    </div>
+
+  </div>
+
+    <label class="gallery__list">
+      <input class="gallery__radio" type="radio" name="switch" id="radio1" checked>
+      <input class="gallery__radio" type="radio" name="switch" id="radio2">
+      <input class="gallery__radio" type="radio" name="switch" id="radio3">
+      <input class="gallery__radio" type="radio" name="switch" id="radio4">
+    </label>
+</div>
+
+
+      </div>
+
+    </section>
+
+    <section class="subscription">
+
+    </section>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
