--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,10 @@
 
     <header class="header">
 
-      <div><a href="#" class="header__img"></a>
+      <div>
+        <a href="#" class="header__img"></a>
         <a href="#" class="header__museum">
-          <img class="header__museum--logo" src='./images/details/textNAMU.svg' alt="logo">
+          <img class="header__museum--logo" src="./images/details/textNAMU.svg" alt="logo">
         </a>
       </div>
 
@@ -169,32 +170,85 @@
     <section class="gallery" id="gallery">
       <div class="container">
         <h2 class="title">Галерея</h2>
-<div class="galler__wrapper">
-  <div class="gallery__content">
+        <div class="galler__wrapper">
+          <div class="gallery__content">
 
-    <div class="gallery__image">
-      <div class="gallery__img gallery__img--1"></div>
-      <div class="gallery__img gallery__img--2"></div>
-      <div class="gallery__img gallery__img--3"></div>
-      <div class="gallery__img gallery__img--4"></div>
-    </div>
+            <div class="gallery__image">
+              <div class="gallery__img gallery__img--1"></div>
+              <div class="gallery__img gallery__img--2"></div>
+              <div class="gallery__img gallery__img--3"></div>
+              <div class="gallery__img gallery__img--4"></div>
+            </div>
 
-  </div>
+          </div>
 
-    <label class="gallery__list">
-      <input class="gallery__radio" type="radio" name="switch" id="radio1" checked>
-      <input class="gallery__radio" type="radio" name="switch" id="radio2">
-      <input class="gallery__radio" type="radio" name="switch" id="radio3">
-      <input class="gallery__radio" type="radio" name="switch" id="radio4">
-    </label>
-</div>
-
-
+          <label class="gallery__list">
+            <input
+              class="gallery__radio"
+              type="radio"
+              name="switch"
+              id="radio1"
+              checked
+            >
+            <input
+              class="gallery__radio"
+              type="radio"
+              name="switch"
+              id="radio2"
+            >
+            <input
+              class="gallery__radio"
+              type="radio"
+              name="switch"
+              id="radio3"
+            >
+            <input
+              class="gallery__radio"
+              type="radio"
+              name="switch"
+              id="radio4"
+            >
+          </label>
+        </div>
       </div>
-
     </section>
 
     <section class="subscription">
+      <div class="container">
+        <div class="subscription__wrapper">
+
+          <div class="subscription__title">Підписка</div>
+          <div class="subscription__subtitle">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+
+          <div class="subscription__button">
+            <form
+              action="#"
+              method="post"
+              class="subscription__forms"
+              id="MyForm"
+            >
+
+            <div>
+              <label for="email"></label>
+              <input type="email"
+                     name="email"
+                     placeholder="E-mail"
+                     id="email"
+                     required
+                     class="subscription__email"
+                     autocomplete="email"
+              >
+            </div>
+
+              <button class="subscription__btn" id="send" type="submit"></button>
+
+            </form>
+          </div>
+        </div>
+
+      </div>
 
     </section>
     <script type="text/javascript" src="scripts/main.js"></script>
