--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./styles/style.scss">
   </head>
 
-  <body class="page__body" id="home">
+  <body class="page__body">
 
-    <header class="header">
+    <header class="header" id="#home">
 
       <div>
         <a href="#" class="header__img"></a>
@@ -69,10 +69,10 @@
 
                 <div class="menu__list--bottom">
                   <li class="menu__item">
-                    <a href="#home" class="menu__link">Про нас</a>
+                    <a href="#aboutUs" class="menu__link">Про нас</a>
                   </li>
                   <li class="menu__item">
-                    <a href="#home" class="menu__link">Контакти</a>
+                    <a href="#contacts" class="menu__link">Контакти</a>
                   </li>
                 </div>
               </div>
@@ -213,15 +213,14 @@
       </div>
     </section>
 
-    <section class="subscription">
+    <section class="subscription" id="aboutUs">
       <div class="container">
         <div class="subscription__wrapper">
-
           <div class="subscription__title">Підписка</div>
+
           <div class="subscription__subtitle">
             Бути в курсі всіх актуальних подій та останніх новин.
           </div>
-
           <div class="subscription__button">
             <form
               action="#"
@@ -229,28 +228,99 @@
               class="subscription__forms"
               id="MyForm"
             >
-
-            <div>
-              <label for="email"></label>
-              <input type="email"
-                     name="email"
-                     placeholder="E-mail"
-                     id="email"
-                     required
-                     class="subscription__email"
-                     autocomplete="email"
-              >
-            </div>
-
+              <div>
+                <label for="email"></label>
+                <input type="email"
+                        name="email"
+                        placeholder="E-mail"
+                        id="email"
+                        required
+                        class="subscription__email"
+                        autocomplete="email"
+                >
+              </div>
               <button class="subscription__btn" id="send" type="submit"></button>
-
             </form>
           </div>
         </div>
-
       </div>
-
     </section>
+
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__content">
+            <div class="footer__logo">
+              <img class="footer__logo--img" src="./images/details/textNAMU.svg" alt="logoNAMU">
+
+              <div class="footer__net">
+                <img
+                  class="footer__net--facebook"
+                  src="./images/details/facebook.svg"
+                  alt="facebook"
+                >
+                <img
+                  class="footer__net--inst"
+                  src="./images/details/instagram.svg"
+                  alt="instagram"
+                >
+              </div>
+            </div>
+
+            <div class="footer__schedule schedule">
+
+              <div class="footer__schedule--time">
+                <p class="schedule__title">Графік роботи</p>
+                <p class="schedule__time">
+                  <span>12:00 — 20:00</span> середа <br>
+                  <span>12:00 — 20:00</span> четвер <br>
+                  <span>12:00 — 20:00</span> п’ятниця <br>
+                  <span>11:00 — 19:00</span> субота <br>
+                  <span>11:00 — 19:00</span> неділя
+                </p>
+                <br>
+                <p class="schedule__text">Вихідні понеділок, вівторок Каса припиняє роботу за 1  годину до закриття музею
+                </p>
+              </div>
+
+              <div class="footer__schedule--contacts">
+                <p class="schedule__contacts">Контакти:</p>
+                <p class="schedule__address">вул. М. Грушевського, 6; Київ, 01001
+                тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+                </p>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="footer__line">
+            <a href="#" id="home" class="footer__up"></a>
+          </div>
+          <hr class="shedule__hr">
+
+          <div class="footerMenu">
+            <div class="footerMenu__list--top">
+              <li class="footerMenu__item">
+                <a href="#gallery" class="footerMenu__link">Галерея</a>
+              </li>
+
+              <li class="footerMenu__item">
+                <a href="#event" class="footerMenu__link">Виставки та події </a>
+              </li>
+            </div>
+
+            <div class="footerMenu__list--bottom">
+              <li class="footerMenu__item">
+                <a href="#aboutUs" class="footerMenu__link">Про нас</a>
+              </li>
+              <li class="footerMenu__item">
+                <a href="#contacts" class="footerMenu__link">Контакти</a>
+              </li>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
