--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
   <body class="page__body">
 
-    <header class="header" id="#home">
+    <header class="header" id="home">
 
       <div>
         <a href="#" class="header__img"></a>
@@ -251,19 +251,32 @@
         <div class="footer__wrapper">
           <div class="footer__content">
             <div class="footer__logo">
-              <img class="footer__logo--img" src="./images/details/textNAMU.svg" alt="logoNAMU">
+              <a href="#">
+                <img
+                class="footer__logo--img"
+                src="./images/details/textNAMU.svg"
+                alt="logoNAMU"
+              >
+              </a>
+
 
               <div class="footer__net">
-                <img
-                  class="footer__net--facebook"
-                  src="./images/details/facebook.svg"
-                  alt="facebook"
-                >
-                <img
-                  class="footer__net--inst"
-                  src="./images/details/instagram.svg"
-                  alt="instagram"
-                >
+                <a href="https://uk-ua.facebook.com/" target="_blank">
+                  <img
+                    class="footer__net--facebook"
+                    src="./images/details/facebook.svg"
+                    alt="facebook"
+                  >
+                </a>
+
+                <a href="https://www.instagram.com/accounts/login/" target="_blank">
+                  <img
+                    class="footer__net--inst"
+                    src="./images/details/instagram.svg"
+                    alt="instagram"
+                  >
+                </a>
+
               </div>
             </div>
 
@@ -285,8 +298,32 @@
 
               <div class="footer__schedule--contacts">
                 <p class="schedule__contacts">Контакти:</p>
-                <p class="schedule__address">вул. М. Грушевського, 6; Київ, 01001
-                тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+                <p class="schedule__address">
+
+                  <a
+                    class="schedule__address"
+                    href="https://maps.app.goo.gl/fC5thsDqx1SFPf7e9"
+                    target="_blank">
+                    вул. М. Грушевського, 6; <br> Київ, 01001 <br>
+                  </a>
+
+                  <a
+                    class="schedule__address"
+                    href="tel:+380442781357">
+                    тел. +38 (044) 278-13-57 <br>
+                  </a>
+
+                  <a
+                    class="schedule__address"
+                    href="tel:+380442787454">
+                    факс +38 (044) 278-74-54 <br>
+                  </a>
+
+                  <a
+                    class="schedule__address"
+                    href="mailto">
+                    e-mail: info@namu.kiev.ua
+                  </a>
                 </p>
               </div>
             </div>
@@ -294,7 +331,7 @@
           </div>
 
           <div class="footer__line">
-            <a href="#" id="home" class="footer__up"></a>
+            <a href="#" id="#home" class="footer__up"></a>
           </div>
           <hr class="shedule__hr">
 
@@ -319,6 +356,12 @@
             </div>
           </div>
         </div>
+
+        <div class="footer__author">
+          <p class="footer__author--name">Designed by Zhyriada Marina</p>
+          <p class="footer__author--name">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+
       </div>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
