--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,11 @@
       <div>
         <a href="#" class="header__img"></a>
         <a href="#" class="header__museum">
-          <img class="header__museum--logo" src="./images/details/textNAMU.svg" alt="logo">
+          <img
+            class="header__museum--logo"
+            src="./images/details/textNAMU.svg"
+            alt="logo"
+          >
         </a>
       </div>
 
@@ -115,7 +119,11 @@
           <div class="main__content">
             <div class="main__events">
 
-              <img class="main__img" src="/images/picture/pic1.svg" alt="pic">
+              <img
+                class="main__img"
+                src="/images/picture/pic1.svg"
+                alt="pic"
+              >
 
               <div class="main__text text">
 
@@ -134,7 +142,10 @@
 
             <div class="main__events top">
 
-              <img class="main__img" src="/images/picture/pic2.svg" alt="pic">
+              <img
+
+
+              >
 
               <div class="main__text text">
 
@@ -240,7 +251,11 @@
                         autocomplete="email"
                 >
               </div>
-              <button class="subscription__btn" id="send" type="submit"></button>
+              <button
+                class="subscription__btn"
+                id="send"
+                type="submit">
+              </button>
             </form>
           </div>
         </div>
@@ -332,7 +347,11 @@
           </div>
 
           <div class="footer__line">
-            <a href="#" id="#home" class="footer__up"></a>
+            <a
+              href="#"
+              id="#home"
+              class="footer__up">
+            </a>
           </div>
           <hr class="shedule__hr">
 
