--- a/src/index.html
+++ b/src/index.html
@@ -143,8 +143,9 @@
             <div class="main__events top">
 
               <img
-
-
+                class="main__img"
+                src="/images/picture/pic2.svg"
+                alt="pic"
               >
 
               <div class="main__text text">
