--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,11 @@
 
       <div class="main__bg bg">
 
-        <img class="bg__img" src="/images/picture/pic3.svg" alt="bg">
+        <img
+          class="bg__img"
+          src="/images/picture/pic3.svg"
+          alt="bg"
+        >
 
         <div class="bg__text">
           <div class="bg__exhibition">
