html & css for menu ready

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,11 @@
   </head>
   <body>
     <header class="header">
-      <a href="#menu" class="header__menu icon icon__menu"></a>
+      <nav class="navigation">
+        <a href="#menu" class="header__menu icon icon__menu"></a>
+      </nav>
 
-      <div>
+      <div class="header__background">
         <a href="#" class="header__logo logo"></a>
         <img src="./images/header-background.jpg"
           alt="header-image"
@@ -40,6 +42,38 @@
         <button href="#" class="button__arrow button__arrow--green"></button>
       </div>
     </header>
+
+    <div class="menu">
+      <nav class="menu__links">
+        <a href="" class="icon icon__cross"></a>
+        <ul class="menu__list">
+          <li class="menu__item"><a href="" class="menu__link">Галерея</a></li>
+          <li class="menu__item"><a href="" class="menu__link">Про Hac</a></li>
+          <li class="menu__item"><a href="" class="menu__link">Виставки та події</a></li>
+          <li class="menu__item"><a href="" class="menu__link">Контакти</a></li>
+        </ul>
+      </nav>
+
+      <div class="line">
+        <hr class="line__horizontal line__horizontal--white">
+      </div>
+
+      <div class="menu__opening">
+        <h4 class="title title__fourth title__fourth--white">Графік роботи</h4>
+
+        <article>
+          <p><span class="menu__opening--bold">12:00 — 20:00</span> середа</p>
+          <p><span class="menu__opening--bold">12:00 — 20:00</span>  четвер</p>
+          <p><span class="menu__opening--bold">12:00 — 20:00</span> п’ятниця</p>
+          <p><span class="menu__opening--bold">11:00 — 19:00</span> субота</p>
+          <p><span class="menu__opening--bold">11:00 — 19:00</span> неділя</p>
+          <br>
+          <span class="menu__opening--bold">Вихідні:</span> понеділок, вівторок
+          Kaca припиняє роботу за 1 годину
+          до закриття музею
+        </article>
+      </div>
+    </div>
 
     <main class="main">
       <section class="events">
@@ -235,11 +269,11 @@
           <h4 class="title title__fourth">Графік роботи</h4>
 
           <article>
-            <p><span class="opening--hour">12:00 - 20:00</span> середа</p>
-            <p><span class="opening--hour">12:00 - 20:00</span>  четвер</p>
-            <p><span class="opening--hour">12:00 - 20:00</span> п’ятниця</p>
-            <p><span class="opening--hour">11:00 - 19:00</span> субота</p>
-            <p><span class="opening--hour">11:00 - 19:00</span> неділя</p>
+            <p><span class="opening--hour">12:00 — 20:00</span> середа</p>
+            <p><span class="opening--hour">12:00 — 20:00</span>  четвер</p>
+            <p><span class="opening--hour">12:00 — 20:00</span> п’ятниця</p>
+            <p><span class="opening--hour">11:00 — 19:00</span> субота</p>
+            <p><span class="opening--hour">11:00 — 19:00</span> неділя</p>
             <br><br>
             Вихідні понеділок, вівторок
             Kaca припиняє роботу за 1 годину
@@ -257,18 +291,15 @@
         <div class="line">
           <hr class="line__horizontal">
         </div>
-        <div class="links">
-          <a>Галерея</a>
-          <br><br>
-          <a>Виставки та події</a>
-        </div>
-        <div class="links">
-          <a>Про Hac</a>
-          <br><br>
-          <a>Контакти</a>
-        </div>
+        <nav class="links">
+          <ul class="links__list">
+            <li class="links__item"><a href="" class="links__link">Галерея</a></li>
+            <li class="links__item"><a href="" class="links__link">Про Hac</a></li>
+            <li class="links__item"><a href="" class="links__link">Виставки та події</a></li>
+            <li class="links__item"><a href="" class="links__link">Контакти</a></li>
+          </ul>
+        </nav>
       </section>
-
     </main>
 
     <footer class="footer">
