problem with menu

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
       </div>
     </header>
 
-    <div class="menu">
+    <div class="menu" id="menu">
       <nav class="menu__links">
         <a href="" class="icon icon__cross"></a>
         <ul class="menu__list">
