corrections of footers-style

--- a/src/index.html
+++ b/src/index.html
@@ -450,48 +450,50 @@
               </p>
             </div>
           </div>
+        </div> 
+      
 
-          <div class="footer__contacts-lower" id="contacts">
-            <h5 class="footer__contacts-title-lower title-lower-fontstyle">Контакти:</h5>
-            <div  class="footer__contacts">
-              <div class="contacts__data fontstyle-lower">
-                <a
+        <div class="footer__contacts-lower" id="contacts">
+          <h5 class="footer__contacts-title-lower title-lower-fontstyle">Контакти:</h5>
+          <div  class="footer__contacts">
+            <div class="contacts__datas fontstyle-lower">
+              <a
+             href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
+            target="_blank"
+            class="contacts__info"
+             >
+              вул. М. Грушевського, 6;
+              </a> 
+              <a
                 href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
                 target="_blank"
                 class="contacts__info"
+              >
+                Київ, 01001<br>
+              </a> 
+              <a href="tel:+38 (044) 278-13-57"
+                data-title="+38 (044) 278-13-57"
+                class="contacts__info">
+                  тел. +38 (044) 278-13-57
+                <br>
+              </a>
+              <a href="tel:+38 (044) 278-74-54"
+                  class="contacts__info"
+                  data-title="+38 (044) 278-74-54"
                 >
-                 вул. М. Грушевського, 6;
-                </a> 
-                <a
-                href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
-                target="_blank"
-                class="contacts__info"
-                >
-                 Київ, 01001<br>
-                </a> 
-                <a href="tel:+38 (044) 278-13-57"
-                  data-title="+38 (044) 278-13-57"
-                  class="contacts__info">
-                   тел. +38 (044) 278-13-57
-                  <br>
-                </a>        
-                <a href="tel:+38 (044) 278-74-54"
-                   class="contacts__info"
-                   data-title="+38 (044) 278-74-54"
-                >
-                  факс +38 (044) 278-74-54<br>
-                </a>
-                <a
+                факс +38 (044) 278-74-54<br>
+              </a>
+              <a
                 href="mailto: info@namu.kiev.ua"
                 target="_blank"
                 class="contacts__info"
                 >
                 e-mail: info@namu.kiev.ua
-                </a>
-              </div>
+              </a>
             </div>
           </div>
         </div>
+       
 
         <div class="page__top">
           <a href="#page__top"  class="page__go-top">
