--- a/src/index.html
+++ b/src/index.html
@@ -452,44 +452,45 @@
           </div>
         </div> 
       
-
-        <div class="footer__contacts-lower" id="contacts">
-          <h5 class="footer__contacts-title-lower title-lower-fontstyle">Контакти:</h5>
-          <div  class="footer__contacts">
-            <div class="contacts__datas fontstyle-lower">
-              <a
-             href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
-            target="_blank"
-            class="contacts__info"
-             >
+        <div class="footer__contacts-block" id="contacts">
+          <div class="footer__contacts-lower">
+            <h5 class="footer__contacts-title-lower title-lower-fontstyle">Контакти:</h5>
+            <div  class="footer__contacts">
+              <div class="contacts__datas fontstyle-lower">
+                <a
+                 href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
+                 target="_blank"
+                 class="contacts__info"
+                >
               вул. М. Грушевського, 6;
-              </a> 
-              <a
-                href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
-                target="_blank"
-                class="contacts__info"
-              >
+                </a> 
+                <a
+                  href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
+                  target="_blank"
+                  class="contacts__info"
+                >
                 Київ, 01001<br>
-              </a> 
-              <a href="tel:+38 (044) 278-13-57"
-                data-title="+38 (044) 278-13-57"
-                class="contacts__info">
-                  тел. +38 (044) 278-13-57
-                <br>
-              </a>
-              <a href="tel:+38 (044) 278-74-54"
+                </a> 
+                <a href="tel:+38 (044) 278-13-57"
+                  data-title="+38 (044) 278-13-57"
+                  class="contacts__info">
+                    тел. +38 (044) 278-13-57
+                  <br>
+                </a>
+                <a href="tel:+38 (044) 278-74-54"
                   class="contacts__info"
                   data-title="+38 (044) 278-74-54"
                 >
                 факс +38 (044) 278-74-54<br>
-              </a>
-              <a
-                href="mailto: info@namu.kiev.ua"
-                target="_blank"
-                class="contacts__info"
+                </a>
+                <a
+                  href="mailto: info@namu.kiev.ua"
+                  target="_blank"
+                  class="contacts__info"
                 >
                 e-mail: info@namu.kiev.ua
-              </a>
+                </a>
+              </div>
             </div>
           </div>
         </div>
