burger almost here

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,9 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navigation">
-        <a href="#menu" class="header__menu icon icon__menu"></a>
+      <nav class="hamburger">
+        <a class="menuIcon icon icon__menu"></a>
+        <a class="closeIcon icon icon__cross"></a>
       </nav>
 
       <div class="header__background">
@@ -43,9 +44,8 @@
       </div>
     </header>
 
-    <div class="menu" id="menu">
+    <div class="menu">
       <nav class="menu__links">
-        <a href="" class="icon icon__cross"></a>
         <ul class="menu__list">
           <li class="menu__item"><a href="" class="menu__link">Галерея</a></li>
           <li class="menu__item"><a href="" class="menu__link">Про Hac</a></li>
