finish task solution

--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@
           </article>
         </div>
 
-        <article>
+        <article class="event__contentPaddingInline">
           <div class="event__bgimg">
             <div class="event__box">
               <div class="event__content">
@@ -236,7 +236,7 @@
 
             <div class="mySlides fade">
               <img
-                src="images/Rectangle__2.png"
+                src="images/Rectangle-gysi.png"
                 class="mySlides__photo"
                 alt="Rectangle__2"
               >
@@ -244,21 +244,17 @@
 
             <div class="mySlides fade">
               <img
-                src="images/Rectangle__3.png"
+                src="images/Rectangle__1.png"
                 class="mySlides__photo"
                 alt="Rectangle__3">
             </div>
 
             <div class="mySlides fade">
               <img
-                src="images/Rectangle__4.png"
+                src="images/Rectangle-gysi.png"
                 class="mySlides__photo"
                 alt="Rectangle__4">
             </div>
-
-            <a class="mySlides__prev" onclick="plusSlides(-1)">❮</a>
-            <a class="mySlides__next" onclick="plusSlides(1)">❯</a>
-
           </div>
           <br>
 
@@ -309,13 +305,13 @@
                 alt="#">
             </a>
             <div class="footer__icons">
-              <a href="#">
+              <a href="https://www.facebook.com/namu.museum/?locale=uk_UA" target="_blank">
                 <img
                   class="footer__fb"
                   src="./images/facebook-footer.svg"
                   alt="#">
               </a>
-              <a href="#">
+              <a href="https://www.instagram.com/namu.museum/" target="_blank">
                 <img
                   class="footer__inst"
                   src="./images/instagram-footer.svg"
