positioning every element

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles/main.scss">
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="home">
       <nav class="hamburger">
         <a class="menuIcon icon icon__menu"></a>
         <a class="closeIcon icon icon__cross"></a>
@@ -32,7 +32,7 @@
         >
       </div>
 
-      <h1 class="title">
+      <h1 class="title header__title">
         ХУДОЖНІЙ
         <br>
         МУЗЕЙ
@@ -47,10 +47,10 @@
     <div class="menu">
       <nav class="menu__links">
         <ul class="menu__list">
-          <li class="menu__item"><a href="" class="menu__link">Галерея</a></li>
-          <li class="menu__item"><a href="" class="menu__link">Про Hac</a></li>
-          <li class="menu__item"><a href="" class="menu__link">Виставки та події</a></li>
-          <li class="menu__item"><a href="" class="menu__link">Контакти</a></li>
+          <li class="menu__item"><a href="#gallery" class="menu__link">Галерея</a></li>
+          <li class="menu__item"><a href="#home" class="menu__link">Про Hac</a></li>
+          <li class="menu__item"><a href="#events" class="menu__link">Виставки та події</a></li>
+          <li class="menu__item"><a href="#contact-us" class="menu__link">Контакти</a></li>
         </ul>
       </nav>
 
@@ -69,6 +69,7 @@
           <p><span class="menu__opening--bold">11:00 — 19:00</span> неділя</p>
           <br>
           <span class="menu__opening--bold">Вихідні:</span> понеділок, вівторок
+          <br>
           Kaca припиняє роботу за 1 годину
           до закриття музею
         </article>
@@ -76,7 +77,7 @@
     </div>
 
     <main class="main">
-      <section class="events">
+      <section class="events" id="events">
         <h2 class="title title__secondary">
           Актуальні
           <br>
@@ -85,7 +86,7 @@
 
         <img src="./images/events/events_image1.jpg"
           alt="events-image"
-          class="picture"
+          class="picture events__picture"
         >
 
         <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
@@ -100,7 +101,7 @@
 
         <img src="./images/events/events_image2.jpg"
           alt="events-image"
-          class="picture"
+          class="picture events__picture"
         >
 
         <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
@@ -126,7 +127,7 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <h2 class="title title__secondary">
           Галерея
         </h2>
@@ -183,25 +184,25 @@
             <article class="slider-slide is-active">
               <img src="./images/gallery/gallery_image1.jpg"
                 alt="gallery_image1"
-                class="gallery__picture"
+                class="gallery__picture events__picture"
               >
             </article>
             <article class="slider-slide">
               <img src="./images/gallery/gallery_image2.jpg"
                 alt="gallery_image2"
-                class="gallery__picture"
+                class="gallery__picture events__picture"
               >
             </article>
             <article class="slider-slide">
               <img src="./images/gallery/gallery_image3.jpg"
                 alt="gallery_image3"
-                class="gallery__picture"
+                class="gallery__picture events__picture"
               >
             </article>
             <article class="slider-slide">
               <img src="./images/gallery/gallery_image4.jpg"
                 alt="gallery_image4"
-                class="gallery__picture"
+                class="gallery__picture events__picture"
               >
             </article>
           </div>
@@ -230,7 +231,7 @@
 
       <section class="subscribe">
         <div class="subscribe__background"></div>
-        <h2 class="title title__secondary subscribe__title">
+        <h2 class="title title__secondary title__secondary--subscribe">
           Підписка
         </h2>
 
@@ -251,7 +252,7 @@
         </div>
       </section>
 
-      <section class="contact-us">
+      <section class="contact-us" id="contact-us">
         <div class="logo"></div>
         <div class="socials">
           <a
@@ -274,7 +275,7 @@
             <p><span class="opening--hour">12:00 — 20:00</span> п’ятниця</p>
             <p><span class="opening--hour">11:00 — 19:00</span> субота</p>
             <p><span class="opening--hour">11:00 — 19:00</span> неділя</p>
-            <br><br>
+            <br>
             Вихідні понеділок, вівторок
             Kaca припиняє роботу за 1 годину
             до закриття музею
@@ -291,7 +292,7 @@
         <div class="line">
           <hr class="line__horizontal">
         </div>
-        <nav class="links">
+        <nav class="links contact-us__links">
           <ul class="links__list">
             <li class="links__item"><a href="" class="links__link">Галерея</a></li>
             <li class="links__item"><a href="" class="links__link">Про Hac</a></li>
