add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,8 @@
           </button>
         </div>
       </div>
+
+      <a class="header__line" href="#events">події</a>
     </header>
 
     <aside class="menu page__menu" id="menu">
@@ -222,47 +224,50 @@
             </div>
           </article>
         </div>
+      </section>
 
-        <div class="slideshow">
-          <div class="slideshow-container">
+      <section>
+        <div class="slider middle">
+          <div class="slides">
 
-            <div class="mySlides fade">
-              <img
-                src="images/Rectangle__1.png"
-                class="mySlides__photo"
-                alt="Rectangle__1"
-              >
+            <input
+              type="radio"
+              name="r"
+              id="r1"
+              checked>
+            <input
+              type="radio"
+              name="r"
+              id="r2">
+            <input
+              type="radio"
+              name="r"
+              id="r3">
+            <input
+              type="radio"
+              name="r"
+              id="r4">
+
+            <div class="slide s1">
+              <img src="./images/Rectangle-tablet-1.png" alt="#">
+            </div>
+            <div class="slide">
+              <img src="./images/Rectangle-gysi.png" alt="#">
+            </div>
+            <div class="slide">
+              <img src="./images/Rectangle-tablet-1.png" alt="#">
+            </div>
+            <div class="slide">
+              <img src="./images/Rectangle-gysi.png" alt="#">
             </div>
 
-            <div class="mySlides fade">
-              <img
-                src="images/Rectangle-gysi.png"
-                class="mySlides__photo"
-                alt="Rectangle__2"
-              >
+            <div class="navigation">
+              <label for="r1" class="bar"></label>
+              <label for="r2" class="bar"></label>
+              <label for="r3" class="bar"></label>
+              <label for="r4" class="bar"></label>
             </div>
 
-            <div class="mySlides fade">
-              <img
-                src="images/Rectangle__1.png"
-                class="mySlides__photo"
-                alt="Rectangle__3">
-            </div>
-
-            <div class="mySlides fade">
-              <img
-                src="images/Rectangle-gysi.png"
-                class="mySlides__photo"
-                alt="Rectangle__4">
-            </div>
-          </div>
-          <br>
-
-          <div class="mySlides__dots">
-            <span class="dot" onclick="currentSlide(0)"></span>
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
           </div>
         </div>
       </section>
@@ -405,34 +410,5 @@
 
       </div>
     </footer>
-
-    <script>
-      let slideIndex = 0;
-      showSlides(slideIndex);
-
-      function plusSlides(n) {
-        showSlides(slideIndex += n);
-      }
-
-      function currentSlide(n) {
-        showSlides(slideIndex = n);
-      }
-
-      function showSlides(n) {
-        let i;
-        let slides = document.getElementsByClassName("mySlides");
-        let dots = document.getElementsByClassName("dot");
-        if (n > (slides.length -1)) {slideIndex = 0}
-        if (n < 0) {slideIndex = slides.length -1}
-        for (i = 0; i < slides.length; i++) {
-          slides[i].style.display = "none";
-        }
-        for (i = 0; i < dots.length; i++) {
-          dots[i].className = dots[i].className.replace(" active", "");
-        }
-        slides[slideIndex].style.display = "block";
-        dots[slideIndex].className += " active";
-      }
-    </script>
   </body>
 </html>
