add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,10 @@
         <div class="header__button">
           <button class="header__button-top">
               КВИТКИ
-            <a href="#" class="icon icon--arrow">
+            <a
+              target="_blank"
+              href="https://museum-portal.com/"
+              class="icon icon--arrow">
               <div class="header__button-img">
                 <img src="./images/Vector-header__button-box.svg" alt="#">
               </div>
