header grid for tablet view

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         МУЗЕЙ
       </h1>
 
-      <div class="button button--green">
+      <div class="button button--green header__button">
         <a href="#" class="button__tickets">КВИТКИ</a>
         <button href="#" class="button__arrow button__arrow--green"></button>
       </div>
